--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
       <svg viewBox="0 0 960 300">
         <symbol id="s-text">
-          <text text-anchor="middle" x="50%" y="80%"> Angela Kanyi</text>
+          <text text-anchor="middle" x="50%" y="60%"> Samuel Kanyi</text>
         </symbol>
     
         <g class = "g-ants">
